loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:82: error: '<-' expected but ')' found.
for(i <= 1 to 4){avance();}
               ^LoopStairs:88: error: illegal start of simple expression
	}
        ^